--- a/index.html
+++ b/index.html
@@ -8,104 +8,156 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <style>
     :root {
-      --origenes-negro: #131313;
-      --origenes-dorado: #846b3f;
+      /* Paleta Dark Mode puro ORÍGENES */
+      --negro-base: #0b0b0b;         /* fondo principal */
+      --negro-profundo: #121212;     /* tarjetas / header / footer */
+      --gris-borde: #242424;         /* líneas y bordes sutiles */
+      --gris-texto: #e8e8e8;         /* texto sobre negro */
+      --gris-placeholder: #9a9a9a;   /* placeholders */
+      --dorado: #c8a45d;             /* acento principal */
+
+      /* Variables que tu CSS/JS original espera */
+      --origenes-negro: #0b0b0b;
+      --origenes-dorado: #c8a45d;
+      --vitrina-red: #c8a45d;        /* reasignado a dorado */
+      --vitrina-dark: #121212;       /* negro profundo */
     }
+
+    /* Fondo general negro sólido */
     body {
-      background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
+      background: var(--negro-base);
+      color: var(--gris-texto);
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       min-height: 100vh;
     }
+
+    /* Header negro sólido con acento dorado */
     .brand-header {
-      background: linear-gradient(135deg, var(--vitrina-red) 0%, #c82519 100%);
-      color: white;
+      background: var(--negro-profundo);
+      color: #ffffff;
       padding: 2rem 0;
       text-align: center;
-      box-shadow: 0 4px 20px rgba(229,48,37,.3);
+      box-shadow: 0 4px 20px rgba(0,0,0,.6);
+      border-bottom: 1px solid rgba(200,164,93,.35);
     }
+
     .logo-header { max-width: 120px; margin-bottom: 1rem; }
+
     .brand-logo {
       font-size: 2.5rem;
       font-weight: bold;
-      text-shadow: 2px 2px 4px rgba(0,0,0,.3);
+      text-shadow: 0 0 12px rgba(200,164,93,.25);
+      color: #ffffff;
     }
+
+    /* Tarjetas oscuras */
     .card {
-      border: none;
+      border: 1px solid var(--gris-borde);
       border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0,0,0,.1);
+      box-shadow: 0 10px 30px rgba(0,0,0,.5);
       backdrop-filter: blur(10px);
-      background: rgba(255,255,255,.95);
+      background: var(--negro-profundo);
+      color: var(--gris-texto);
     }
+
     .card-header {
-      background: var(--vitrina-dark);
-      color: white;
+      background: var(--negro-profundo);
+      color: #ffffff;
       border-radius: 20px 20px 0 0!important;
       padding: 1.5rem;
+      box-shadow: inset 0 -3px 8px rgba(200,164,93,.15);
+      border-bottom: 1px solid var(--gris-borde);
     }
-    .form-label { color: var(--vitrina-dark); font-weight: 600; }
+
+    .form-label { color: var(--dorado); font-weight: 600; }
+
     .form-control, .form-select {
-      border: 2px solid #e9ecef;
+      border: 2px solid var(--gris-borde);
+      background-color: #0f0f0f;
+      color: var(--gris-texto);
       border-radius: 12px;
       padding: .75rem 1rem;
       transition: all .3s;
     }
+
+    .form-control::placeholder { color: var(--gris-placeholder); }
+
     .form-control:focus, .form-select:focus {
-      border-color: var(--vitrina-red);
-      box-shadow: 0 0 0 .2rem rgba(229,48,37,.25);
+      border-color: var(--dorado);
+      box-shadow: 0 0 0 .2rem rgba(200,164,93,.3);
+      background-color: #111111;
     }
+
+    /* Botón principal dorado */
     .btn-calculate {
-      background: linear-gradient(135deg, var(--vitrina-red) 0%, #c82519 100%);
-      color: white;
+      background: var(--dorado);
+      color: #0b0b0b;
       border: none;
       border-radius: 12px;
       padding: 1rem 2rem;
       font-weight: bold;
       text-transform: uppercase;
+      box-shadow: 0 4px 12px rgba(200,164,93,.25);
     }
     .btn-calculate:hover {
       transform: translateY(-2px);
-      box-shadow: 0 8px 25px rgba(229,48,37,.4);
+      box-shadow: 0 8px 25px rgba(200,164,93,.4);
+      filter: brightness(1.05);
     }
+
+    /* Botón secundario dark */
     .btn-reset {
-      background: #f0f0f0;
-      color: #000;
-      border: none;
+      background: #1a1a1a;
+      color: #f2f2f2;
+      border: 1px solid var(--gris-borde);
       border-radius: 12px;
       padding: 1rem 2rem;
       font-weight: bold;
+      box-shadow: 0 4px 12px rgba(0,0,0,.4);
     }
     .btn-reset:hover {
-      background: #e0e0e0;
+      background: #222222;
       transform: translateY(-2px);
+      box-shadow: 0 8px 20px rgba(0,0,0,.6);
     }
+
+    /* Resultados: tarjeta negra con acentos dorados */
     .result-card {
-      background: linear-gradient(135deg, #28a745 0%, #20c997 100%);
-      color: white;
+      background: #0f0f0f; /* sólido */
+      color: #ffffff;
+      border: 1px solid rgba(200,164,93,.35);
       border-radius: 15px;
       padding: 2rem;
       margin-top: 2rem;
-      box-shadow: 0 8px 25px rgba(40,167,69,.3);
+      box-shadow: 0 8px 25px rgba(0,0,0,.6);
     }
+
     .result-item {
       display: grid;
       grid-template-columns: 1fr auto;
       align-items: center;
       padding: .5rem 0;
-      border-bottom: 1px solid rgba(255,255,255,.2);
+      border-bottom: 1px solid rgba(255,255,255,.12);
     }
+
     .result-item:last-child {
       border: none;
       margin-top: 1rem;
       font-size: 1.3rem;
       font-weight: bold;
     }
+
     .result-item span:last-child {
       white-space: nowrap;
       text-align: right;
+      color: #ffffff;
     }
+
     .currency { font-family: 'Courier New', monospace; font-weight: bold; }
+
     .icon-container {
-      background: rgba(255,255,255,.1);
+      background: rgba(200,164,93,.15);
+      border: 1px solid rgba(200,164,93,.35);
       border-radius: 50%;
       width: 50px;
       height: 50px;
@@ -113,17 +165,39 @@
       align-items: center;
       justify-content: center;
       margin: 0 auto 1rem;
+      box-shadow: 0 2px 10px rgba(0,0,0,.6), inset 0 0 8px rgba(200,164,93,.2);
     }
+
     .input-group-text {
-      background: var(--vitrina-red);
-      color: white;
-      border: 2px solid var(--vitrina-red);
+      background: var(--dorado);
+      color: #0b0b0b;
+      border: 2px solid var(--dorado);
       border-radius: 12px 0 0 12px;
+      box-shadow: inset 0 0 6px rgba(200,164,93,.4);
     }
+
     .input-group .form-control {
       border-left: none;
       border-radius: 0 12px 12px 0;
     }
+
+    /* Alertas sobre fondo oscuro */
+    .alert-info {
+      background-color: rgba(200,164,93,.12);
+      color: #f0e7cf;
+      border: 1px solid rgba(200,164,93,.35);
+    }
+    .alert-secondary {
+      background-color: rgba(255,255,255,.06);
+      color: #e6e6e6;
+      border: 1px solid rgba(255,255,255,.12);
+    }
+
+    /* Footer negro sólido con sutil borde dorado */
+    footer {
+      border-top: 1px solid rgba(200,164,93,.25);
+    }
+
     @media (max-width: 576px) {
       .form-label, .form-control, .form-select, .btn-calculate, .btn-reset { font-size: .9rem; }
       .btn-calculate, .btn-reset { padding: .75rem 1rem; }
@@ -139,14 +213,19 @@
     <h1 class="brand-logo mb-2">Vitrina Inc</h1>
     <p class="lead mb-0">Calculadora de Precio Final</p>
   </header>
+
   <div class="container my-5">
     <div class="row justify-content-center">
       <div class="col-12 col-md-10 col-lg-8">
         <div class="card">
-          <div class="card-header text-center"><h3><i class="fas fa-calculator me-2"></i>Calcular Precio Final</h3></div>
+          <div class="card-header text-center">
+            <h3><i class="fas fa-calculator me-2"></i>Calcular Precio Final</h3>
+          </div>
           <div class="card-body p-4">
             <div class="row mb-4 align-items-center">
-              <label for="tipoMoneda" class="col-sm-4 form-label"><i class="fas fa-coins me-2 text-danger"></i>Tipo de Moneda</label>
+              <label for="tipoMoneda" class="col-sm-4 form-label">
+                <i class="fas fa-coins me-2" style="color:#c8a45d;"></i>Tipo de Moneda
+              </label>
               <div class="col-sm-8">
                 <select id="tipoMoneda" class="form-select" onchange="cambiarMoneda()">
                   <option value="COP" selected>Pesos Colombianos (COP)</option>
@@ -154,21 +233,26 @@
                 </select>
               </div>
             </div>
+
             <div id="trmInfo" class="mb-4" style="display:none">
               <div class="alert alert-info d-flex flex-column">
                 <strong>TRM:</strong> $<span id="trmValue">0,00</span> COP por USD
-                <small id="trmFecha" style="opacity:.8; margin-top:.25rem"></small>
+                <small id="trmFecha" style="opacity:.85; margin-top:.25rem"></small>
               </div>
             </div>
+
             <div class="row mb-4 align-items-center">
-              <label for="costoBruto" class="col-sm-4 form-label"><i class="fas fa-dollar-sign me-2 text-danger"></i>Costo Bruto</label>
+              <label for="costoBruto" class="col-sm-4 form-label">
+                <i class="fas fa-dollar-sign me-2" style="color:#c8a45d;"></i>Costo Bruto
+              </label>
               <div class="col-sm-8">
                 <div class="input-group">
                   <span class="input-group-text" id="simboloMoneda">$</span>
                   <input type="number" id="costoBruto" class="form-control" min="0" step="0.01" oninput="mostrarConversion()">
                   <span class="input-group-text" id="codigoMoneda">COP</span>
                 </div>
-                <div class="form-text" id="textoAyuda">Ingrese el costo base en pesos</div>
+                <div class="form-text" id="textoAyuda" style="color:#c8a45d;">Ingrese el costo base en pesos</div>
+
                 <div id="conversionEnVivo" class="mt-2" style="display:none">
                   <div class="alert alert-secondary py-2">
                     <small><strong>Conversión a COP:</strong> $<span id="valorConvertido">0,00</span></small>
@@ -176,71 +260,90 @@
                 </div>
               </div>
             </div>
+
             <div class="row mb-4 align-items-center">
-              <label for="rentabilidad" class="col-sm-4 form-label"><i class="fas fa-percentage me-2 text-danger"></i>Rentabilidad</label>
+              <label for="rentabilidad" class="col-sm-4 form-label">
+                <i class="fas fa-percentage me-2" style="color:#c8a45d;"></i>Rentabilidad
+              </label>
               <div class="col-sm-8"><select id="rentabilidad" class="form-select"></select></div>
             </div>
+
             <div class="row">
               <div class="col-md-6 mb-3">
-                <button class="btn btn-calculate w-100" onclick="calcularPrecio()"><i class="fas fa-calculator me-2"></i>Calcular Precio</button>
+                <button class="btn btn-calculate w-100" onclick="calcularPrecio()">
+                  <i class="fas fa-calculator me-2"></i>Calcular Precio
+                </button>
               </div>
               <div class="col-md-6 mb-3">
-                <button class="btn btn-reset w-100" onclick="resetForm()"><i class="fas fa-refresh me-2"></i>Limpiar</button>
+                <button class="btn btn-reset w-100" onclick="resetForm()">
+                  <i class="fas fa-refresh me-2"></i>Limpiar
+                </button>
               </div>
             </div>
+
             <div id="resultados" class="result-card" style="display:none">
               <div class="text-center mb-3">
-                <div class="icon-container"><i class="fas fa-receipt text-white fa-2x"></i></div>
-                <h4>Desglose de Costos</h4>
+                <div class="icon-container"><i class="fas fa-receipt fa-2x" style="color:#c8a45d;"></i></div>
+                <h4 style="color:#ffffff;">Desglose de Costos</h4>
               </div>
+
               <div class="result-item">
-                <span><i class="fas fa-box me-2"></i>Costo Bruto:</span>
+                <span><i class="fas fa-box me-2" style="color:#c8a45d;"></i>Costo Bruto:</span>
                 <span class="currency" id="mostrarCostoBruto">$0,00 COP</span>
               </div>
+
               <div class="result-item" id="filaConversion" style="display:none">
-                <span><i class="fas fa-exchange-alt me-2"></i>Costo Original (USD):</span>
+                <span><i class="fas fa-exchange-alt me-2" style="color:#c8a45d;"></i>Costo Original (USD):</span>
                 <span class="currency" id="mostrarCostoUSD">$0,00 USD</span>
               </div>
+
               <div class="result-item">
-                <span><i class="fas fa-chart-line me-2"></i>Rentabilidad (<span id="mostrarPorcentaje">0</span>%):</span>
+                <span><i class="fas fa-chart-line me-2" style="color:#c8a45d;"></i>Rentabilidad (<span id="mostrarPorcentaje">0</span>%):</span>
                 <span class="currency" id="mostrarRentabilidad">$0,00 COP</span>
               </div>
+
               <div class="result-item">
-                <span><i class="fas fa-bullhorn me-2"></i>Publicidad (2%):</span>
+                <span><i class="fas fa-bullhorn me-2" style="color:#c8a45d;"></i>Publicidad (2%):</span>
                 <span class="currency" id="mostrarPublicidad">$0,00 COP</span>
               </div>
-              <!-- Nuevo: Impuestos 7.5% -->
+
               <div class="result-item">
-                <span><i class="fas fa-receipt me-2"></i>Impuestos (7.5%):</span>
+                <span><i class="fas fa-receipt me-2" style="color:#c8a45d;"></i>Impuestos (7.5%):</span>
                 <span class="currency" id="mostrarImpuestos">$0,00 COP</span>
               </div>
+
               <div class="result-item">
-                <span><i class="fas fa-cube me-2"></i>Costo de Empaque:</span>
+                <span><i class="fas fa-cube me-2" style="color:#c8a45d;"></i>Costo de Empaque:</span>
                 <span class="currency">$1 000 COP</span>
               </div>
+
               <div class="result-item">
-                <span><i class="fas fa-truck me-2"></i>Costo de Envío:</span>
+                <span><i class="fas fa-truck me-2" style="color:#c8a45d;"></i>Costo de Envío:</span>
                 <span class="currency">$25 000 COP</span>
               </div>
+
               <div class="result-item">
-                <span><i class="fas fa-tags me-2"></i><strong>Precio en efectivo:</strong></span>
+                <span><i class="fas fa-tags me-2" style="color:#c8a45d;"></i><strong>Precio en efectivo:</strong></span>
                 <span class="currency" id="precioEfectivo">$0,00 COP</span>
               </div>
+
               <div class="result-item">
-                <span><i class="fas fa-credit-card me-2"></i><strong>Precio con tarjeta:</strong></span>
+                <span><i class="fas a-credit-card me-2" style="color:#c8a45d;"></i><strong>Precio con tarjeta:</strong></span>
                 <span class="currency" id="precioTarjeta">$0,00 COP</span>
               </div>
             </div>
-          </div>
-        </div>
+          </div> <!-- card-body -->
+        </div> <!-- card -->
       </div>
     </div>
   </div>
-  <footer class="text-center py-4" style="background: var(--vitrina-dark); color: white;">
+
+  <footer class="text-center py-4" style="background: var(--negro-profundo); color: #ffffff;">
     <div class="container">
       <p class="mb-0">© 2025 Origenes Inc. Todos los derechos reservados.</p>
     </div>
   </footer>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
   <script>
     let TRM = 0, currentTipo = 'COP', costoEmpaque = 1000, costoEnvio = 25000;
@@ -354,4 +457,3 @@
   </script>
 </body>
 </html>
-
